css/calendar.css
/* -------------------------------------------------------------------------
 * Espresso Events Calendar Stylesheet
 * (c) 2013 Espresso Events
 * -------------------------------------------------------------------------*/

#espresso_calendar { 
	position: relative !important; 
	z-index:100; 
	margin:1em 0 0; 
	width: 100% !important; 
}
#espresso_calendar:not(.ui-widget) .fc-header-title h2,
.fc-header-title h2 {
	font-family:"Helvetica Neue", "Helvetica", Arial, sans-serif;
	font-size:1.3rem;
	margin:0; 
	font-weight: 400; 
	line-height: 1;
	vertical-align: bottom !important;
}
#espresso_calendar .ui-widget .fc-header-title h2 {
	font-family:"Helvetica Neue", "Helvetica", Arial, sans-serif;
	font-size:1rem;
	letter-spacing: -1px;
	margin:0; 
	font-weight: 400; 
	line-height: 1;
	vertical-align: bottom !important;

}
#espresso_calendar .fc-content table { 
	background-color:#fff; 
}
#espresso_calendar table.fc-header, 
#espresso_calendar table.fc-border-separate { 
	border: none; 
	margin-bottom: 0;
}
#espresso_calendar .fc-day-header {
	padding:5px 0;  
	font-weight: 400;
}
#espresso_calendar .fc .fc-header-space,
.fc .fc-header-space {
	padding-left:3px;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button { 
	-moz-box-sizing: content-box !important; 
	box-sizing: content-box !important; 
	border: 1px solid #ccc;
	padding: 5px 10px; 
	border-radius: 0px; 
	background: #fff; 
	box-shadow:none; 
	text-shadow: 0px 0px 0px #fff; 
	word-wrap: normal; 
	font-weight: 400; 
	font-size:.8rem; 
	opacity: 1;
	margin-right:1px;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-prev, 
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-next { padding: 10px 0.6em; 
	color:#fff; 
	text-shadow: 0px 0px 0px #fff; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-prev,
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-month {  
	font-size:.8rem; 
	padding: 5px 10px;
	color: #777;
	border-top-left-radius: 1px; 
	border-bottom-left-radius: 1px; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-next,
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-today  {  
	font-size:.8rem; 
	padding: 5px 10px;
	color: #777;
	border-top-right-radius: 1px; 
	border-bottom-right-radius: 1px; 
}
#espresso_calendar:not(.ui-widget) .fc-button .fc-icon-wrap  { 
	top: auto; 
	float: none; 
}
#espresso_calendar:not(.ui-widget) .fc-button .fc-icon-wrap .ui-icon  { 
	top: auto; 
	float: none; 
	margin:14.5px auto 0; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-header-space { 
	display: inline-block; 
	padding:0; 
	width:1px; 
	height:45px; 
	background:#fff; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-text-arrow { 
	color:#777A80; 
	text-shadow:.5px .5px 0px #fff; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-other-month {  
	background:#fcfcfc; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-state-highlight {  
	background:#FEFEDF; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-day-number { 
	color: #777;
	font-size: 1rem; 
	line-height:2; 
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-view-agendaDay .fc-agenda-body td div {
	min-height:50px;
}
#espresso_calendar:not(.ui-widget) .fc-state-active,
#espresso_calendar:not(.ui-widget) .fc-state-hover,
#espresso_calendar:not(.ui-widget) .fc-state-hover .fc-text-arrow { 
	color:#2F3334 !important; 
}
#espresso_calendar:not(.ui-widget) .fc-state-disabled { 
	display: none; 
	color:#999; 
}
#espresso_calendar td { 
	padding: 0; 
}
#espresso_calendar .fc-grid .fc-day-number { 
	padding:0 .5em; 
}	
#espresso_calendar:not(.ui-widget) .fc-event { 
	margin:0 1.5px 3px;
	border: none; 
	border-radius:0; 
	background-color:#007BAE; 
	font-size:1rem; 
	line-height:1; 
}
#espresso_calendar.calendar_widget .fc-event { 
	margin:0 0 2px; 
	padding:0px; 
	min-height:15px; 
}
#espresso_calendar .fc-event a { 
	letter-spacing:-.5px; 
}
#espresso_calendar .fc-event a:hover { 
	text-shadow: none; 
}
#espresso_calendar:not(.ui-widget) .fc-event.expired { 
	background:#EEEEE6 !important; 
	color:#999 !important; 
}

#espresso_calendar .fc-event-title { 
	display: block; 
	padding: 0 4px; 
}
#espresso_calendar .fc-event-time { 
	display: block; 
	padding: 0 0 4px; 
}
#espresso_calendar .time-display-block,
#espresso_calendar .event-end-time { 
	margin:0;
	padding: 0 4px;	 
	font-size: .85rem;
}
#espresso_calendar .thumb-wrap { 
	display: block; 
	overflow: hidden;  
	padding: 3px 0 0; 
	max-width:150px; 
	vertical-align: middle;
}
#espresso_calendar .thumb-wrap img { 
	max-width:150px; 
	width:100%; 
	border-radius: 0; 
	box-shadow: none; 
	vertical-align: middle;
}
#espresso_calendar .fc-view-agendaWeek  .thumb-wrap { 
	overflow: hidden; 
	max-height: 20px; 
}
#espresso_calendar .fc-view-agendaDay .thumb-wrap { 
	height: auto; 
}
#espresso_calendar .fc-widget-header {
	font-weight: 400;
}
.qtip, .ui-helper-reset { 
	border: 1px solid #ccc;
	padding: 10px; 
}
.ui-tooltip-title {
	font-size:1rem;
	font-weight: 600;
	margin:10px;
}
.ui-tooltip-content p {
	font-size:.85rem;
	line-height: 1.2;
	padding:10px 10px 0 10px;
}
p.time_cal_qtip {
	padding:10px;
	margin: 10px;
	border-top:1px dashed #ccc;
	border-bottom:1px dashed #ccc;
}
.qtip-close .ui-icon {
	margin:0 !important;
}
.attendee_limit_qtip,
.time_cal_qtip {
	margin: 1em 0; 
	font-weight: 400;
}
.sold-out-dv,
.reg-now-btn {
	display: inline-block; 
	float: right; 
	margin:10px; 
	padding: .5em 1em .5em; 
	border-radius: 2px; 
	color: #777; 
	text-decoration: none; 
	font-weight: 400; 
	font-size: 1rem; 
	line-height: 2;
}
a.reg-now-btn:hover { 
	color:#777; 
	text-decoration:none;
}
a.reg-now-btn { 
	box-sizing: content-box !important; 
	border: 1px solid #ccc;
	padding: 5px 10px; 
	border-radius: 0px; 
	background: #fff; 
	box-shadow:none; 
	text-shadow: 0px 0px 0px #fff; 
	word-wrap: normal; 
	font-weight: 400; 
	font-size:.8rem; 
	color: #777; 
}
.sold-out-dv {
	background: #E44064; 
}


/* Calendar Widget CSS */
/* this stuff controls the widget styles and overrides some of the default stuff to make the widget prettier */
/* added in 2.0 by Chris Reynolds */

.espresso_calendar_widget span.fc-event-title,
.espresso_calendar_widget p.time-display-block,
.espresso_calendar_widget .thumb-wrap {
	position: absolute;
	left: -999em; /* hide the titles because they make things ugly */
}
.espresso_calendar_widget .fc-event-skin {
	height: 16px;
	border: none;
	background-color: transparent; /* get rid of the background color and border */
}


.espresso_calendar_widget .fc-day-content div { min-height: 15px; }
.espresso_calendar_widget a.fc-event-skin div:hover { background-position:6px 0px!important; }
.espresso_calendar_widget .fc-header h2 { font-weight: normal; font-size: 1.2em; } /* resets the height of the month name */
.espresso_calendar_widget th.fc-widget-header { font-weight: normal; } /* resets the weight of the days */
.espresso_calendar_widget .fc-button-content { padding: 0 5px; height: 16px; font-size: 0.8em; line-height: 16px; } /* resets the button styles */
.espresso_calendar_widget table.fc-header { margin-bottom: 0; } /* removes any padding under the header table (might be built into the theme's style.css) */

/* resets the font size of the dates */
.espresso_calendar_widget table.fc-border-separate tbody { 
	font-size: 0.8em;
	/*background-color: #fff;
	color: #000;*/
} 

.espresso_calendar_widget table.fc-border-separate thead { font-size: 0.75em; } /* resets the font size of the day names */

/* default resets for themeroller */

.ui-state-highlight.fc-today { border-top: 1px solid #AAA; border-left: 1px solid #aaa; }
a.fc-event.themeroller.ui-widget-header span.fc-event-title,
a.fc-event.themeroller.ui-widget-header p.time-display-block { font-weight: normal; }
.themeroller .thumb-wrap { overflow: hidden; max-height: 80px; }
.fc-view-agendaDay .themeroller .thumb-wrap { max-height: 100%; }
.fc-corner-left .fc-event-inner { border-left: 0px; }

.espresso_calendar_widget th.ui-widget-header { font-weight: normal; }
.espresso_calendar_widget .fc-button-content .ui-icon { margin-top: -50%; }
.espresso_calendar_widget span.ui-icon { margin: 0; } /* this resets the style of the themeroller < > icons */


.espresso_calendar_widget .fc-button {
	height:auto;
}



#ee-calendar-ajax-loader-img {
	position:absolute; top:-16px; left:50%; margin:0 0 0 -33px;
	box-shadow: none !important;
}
.fc-header td {
	border: none;
}
/* prevent transitions from getting applied to calendar links as some themes are known to do this */

#espresso_calendar a {
	-webkit-transition: none!important;
	-moz-transition:    none!important;
	-ms-transition:     none!important;
	-o-transition:      none!important;
	transition:         none!important;
}
.ui-tooltip-tip { position:absolute; }

@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {

	/* Force table to not be like tables anymore */
	table.fc-header, thead.fc-header, table.fc-header tbody, table td.fc-header-left, table td.fc-header-center, table td.fc-header-right, table.fc-header tr { 
		display: block; 
		border:none;
	}
	.fc-button.fc-button-prev.fc-state-default.fc-corner-left.fc-corner-right {
		position: absolute;
		top:55px;
	}
	table.fc-header td.fc-header-left{
		/* Behave  like a "row" */
		border: none;
		position: relative; 
		height:0;
	}
	td.fc-header-center,
	td.fc-header-right {
		width:100%;
	}
	table.fc-header td.fc-header-center,
	table.fc-header td.fc-header-right { 
		/* Behave  like a "row" */
		border: none;
		position: relative; 
		height:55px;
	}
	table.fc-header td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
	}
	.qtip_info {
		display:block;
	}
	#espresso_calendar .fc-event-title,
	#espresso_calendar .time-display-block,
	#espresso_calendar .thumb-wrap,
	.ui-tooltip-content p:first-child {
		display:none;
	}
	}

